[tool.poetry]
name = "dlp-pytorch"
version = "0.1.0"
description = "A simple feed-forward neural network model serving via Flask"
authors = ["Shreyak Vashisht <shreyakvashisht21@cloudshell>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
pandas = "^1.3.3"
numpy = ">=1.20,<2.0"
torch = "1.11.0"
torchvision = "0.12.0"
setuptools = "*"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
